# N.M.C.C.V.C.

./: .gitignore  CMakeLists.txt  README.md
Eter-MC++/: Eter-MC++.sln
Eter-MC++/Coordinates_DLL/: Coordinates.cpp  Coordinates.h  Coordinates_DLL.vcxproj  Coordinates_DLL.vcxproj.filters
Eter-MC++/Eter-MC++/: Card.cpp  Card.h  CardStatus.h  CardTexture.cpp  CardTexture.h  Color.h  Colors.h  Coordinates.cpp  Coordinates.h  Coordinates_DLL.lib  ElementalType.h  Eter-MC++.cpp  Eter-MC++.vcxproj  Eter-MC++.vcxproj.filters  ExplosionCard.cpp  ExplosionCard.h  ExplosionType.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameLogic.cpp  GameLogic.h  GameMode.h  GameModeElemental.cpp  GameModeElemental.h  GameModeMageDuel.cpp  GameModeMageDuel.h  GameModeTournament.cpp  GameModeTournament.h  GameModeTraining.cpp  GameModeTraining.h  GameState.h  Graphics.cpp  Graphics.h  Mage.cpp  Mage.h  MageType.h  Player.cpp  Player.h  (+14 more)
Eter-MC++/Eter-MC++/Dependencies/assets/: regex.txt
